src/styles.scss
ol {
    margin: 0;
    padding: 0;
}

li {
    margin: 0;
    list-style: none;;
}

.phase {
    width: 100%;
    min-height: 10rem;
    border: 0.1rem solid black;
    margin: 0.1rem;
    h2 {
        margin: 0;
    }
}

.streams-container {
    border: 0.1rem solid black;
    margin: 0.1rem;
    display: flex;
}

.streams {
  display: flex;
  align-items: flex-start;
}

.stream {
    margin: 1rem;
    border: 0.1rem solid black;
    h3, h4 {
        margin: 0;
    }
    align-self: top;
}

input {
  display: block;
}

.ticket {
  margin: 0.1rem;
  border: 0.1rem solid black;
}
#modal-backdrop {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  height: 100vh;
  width: 100%;
  color: black;
  background: rgba(0,0,0,0.3);
}

#new-ticket-modal {
  position: relative;
  z-index: 2;
  // left: 50%;
  width: 50%;
  margin: 0 auto;
  top: 30%;
  // transform: translate(-50%, -50%);
  border: 0.1rem solid black;
  background: white;
}

